--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-PORT=
+DB_URI= # MongoDB connection URL
+PORT= # Connection port
+MONGODB_USER= # Program user
+MONGODB_PASSWORD= # User password
+MONGODB_DB= # Database
