--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-template",
+  "name": "e-pharmacy-shop-back",
   "version": "1.0.0",
   "description": "",
   "type": "module",
@@ -14,7 +14,7 @@
     "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
-  "author": "Dmytro Ostapchuk <adrenalinbd@gmail.com>",
+  "author": "Yevheniia Narizhna",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.17.0",
