auth-stores-prod

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ PORT= # Connection port
 MONGODB_USER= # Program user
 MONGODB_PASSWORD= # User password
 MONGODB_DB= # Database
+
+SECRET_KEY= # My secretkey
